cmake_minimum_required(VERSION 3.24)
project(untitled228)

set(CMAKE_CXX_STANDARD 17)

add_executable(leetcode leetcode1687.cpp)
add_executable(leetcode1780 leetcode1780.cpp)
add_executable(leetcode1697 leetcode1697.cpp)
add_executable(leetcode1945 leetcode1945.cpp)
add_executable(leetcode1703 leetcode1703.cpp)
add_executable(leetcode1971.cpp leetcode1971.cpp)
add_executable(leetcode1760.cpp leetcode1760.cpp)
add_executable(leetcode1753.cpp leetcode1753.cpp)
add_executable(leetcode1799.cpp leetcode1799.cpp)
add_executable(leetcode2011.cpp leetcode2011.cpp)
add_executable(Acwing4261.cpp Acwing4261.cpp)
add_executable(leetcode1754.cpp leetcode1754.cpp)
add_executable(leetcode1739.cpp leetcode1739.cpp)
add_executable(leetcode1759 leetcode1759.cpp)
add_executable(leetcode2027.cpp leetcode2027.cpp)
add_executable(leetcode1750 leetcode1750.cpp)
add_executable(Acwing3400.cpp Acwing3400.cpp)
add_executable(leetcode2032.cpp leetcode2032.cpp)
add_executable(Acwing4366.cpp Acwing4366.cpp)
add_executable(leetcode855.cpp leetcode855.cpp)
add_executable(Acwing3443.cpp Acwing3443.cpp)
add_executable(Acwing4818.cpp Acwing4818.cpp)
add_executable(leetcode2037.cpp leetcode2037.cpp)
add_executable(Acwing4645.cpp Acwing4645.cpp)
add_executable(leetcode2351.cpp leetcode2351.cpp)
add_executable(leetcode1801.cpp leetcode1801.cpp)
add_executable(leetcode2042.cpp leetcode2042.cpp)
add_executable(Acwing4644.cpp Acwing4644.cpp)
add_executable(leetcode1802.cpp leetcode1802.cpp)
add_executable(Acwing4653.cpp Acwing4653.cpp)
add_executable(leetcode1803.cpp leetcode1803.cpp)
add_executable(Acwing4655.cpp Acwing4655.cpp)
add_executable(leetcode2180.cpp leetcode2180.cpp)
add_executable(Acwing4652.cpp Acwing4652.cpp)
add_executable(byteDanceTest1.cpp byteDanceTest1.cpp)
add_executable(byteDanceTest2.cpp byteDanceTest2.cpp)
add_executable(leetcode1658.cpp leetcode1658.cpp)
add_executable(Acwing4656.cpp Acwing4656.cpp)
add_executable(leetcode2185.cpp leetcode2185.cpp)
add_executable(leetcode1806.cpp leetcode1806.cpp)
add_executable(leetcode753.cpp leetcode753.cpp)
add_executable(Acwing4454.cpp Acwing4454.cpp)
add_executable(leetcode1807.cpp leetcode1807.cpp)
add_executable(leetcode2287.cpp leetcode2287.cpp)
add_executable(leetcode1819.cpp leetcode1819.cpp)
add_executable(leetcode1813.cpp leetcode1813.cpp)
add_executable(leetcode1814.cpp leetcode1814.cpp)
add_executable(leetcode1825.cpp leetcode1825.cpp)
add_executable(leetcode2299.cpp leetcode2299.cpp)
add_executable(Acwing4700.cpp Acwing4700.cpp)
add_executable(leetcode1817.cpp leetcode1817.cpp)
add_executable(leetcode1824.cpp leetcode1824.cpp)
add_executable(leetcode1815.cpp leetcode1815.cpp)
add_executable(leetcode1828.cpp leetcode1828.cpp)
add_executable(leetcode1632.cpp leetcode1632.cpp)
add_executable(leetcode1664.cpp leetcode1664.cpp)
add_executable(leetcode2315.cpp leetcode2315.cpp)
add_executable(leetcode1669.cpp leetcode1669.cpp)
add_executable(leetcode2319.cpp leetcode2319.cpp)
add_executable(leetcode1129.cpp leetcode1129.cpp)
add_executable(leetcode1604.cpp leetcode1604.cpp)
add_executable(leetcode1797.cpp leetcode1797.cpp)
add_executable(leetcode1223.cpp leetcode1223.cpp)
add_executable(leetcode2335.cpp leetcode2335.cpp)
add_executable(leetcode1138.cpp leetcode1138.cpp)
add_executable(leetcode1234.cpp leetcode1234.cpp)
add_executable(leetcode1124.cpp leetcode1124.cpp)
add_executable(leetcode1250.cpp leetcode1250.cpp)
add_executable(Acwing3956.cpp Acwing3956.cpp)
add_executable(leetcode2341.cpp leetcode2341.cpp)
add_executable(ACwing3729.cpp ACwing3729.cpp)
add_executable(Acwing798.cpp Acwing798.cpp)
add_executable(leetcode1139.cpp leetcode1139.cpp)
add_executable(Acwing789.cpp Acwing789.cpp)
add_executable(Acwing3768.cpp Acwing3768.cpp)
add_executable(leetcode1237.cpp leetcode1237.cpp)
add_executable(leetcode1792.cpp leetcode1792.cpp)
add_executable(leetcode2347.cpp leetcode2347.cpp)
add_executable(leetcode1140.cpp leetcode1140.cpp)
add_executable(Acwing1249.cpp Acwing1249.cpp)
add_executable(Acwing836.cpp Acwing836.cpp)
add_executable(Acwing2058.cpp Acwing2058.cpp)
add_executable(leetcode1238.cpp leetcode1238.cpp)
add_executable(leetcode2357.cpp leetcode2357.cpp)
add_executable(leetcode1247.cpp leetcode1247.cpp)
add_executable(Acwing4866.cpp Acwing4866.cpp)
add_executable(leetcode6367.cpp leetcode6367.cpp)
add_executable(leetcode1239.cpp leetcode1239.cpp)
add_executable(leetcode2363.cpp leetcode2363.cpp)
add_executable(Acwing1562.cpp Acwing1562.cpp)
add_executable(leetcode2373.cpp leetcode2373.cpp)
add_executable(Acwing3502.cpp Acwing3502.cpp)
add_executable(Acwing842.cpp Acwing842.cpp)
add_executable(Acwing843.cpp Acwing843.cpp)
add_executable(Acwing3696.cpp Acwing3696.cpp)
add_executable(Acwing1488.cpp Acwing1488.cpp)
add_executable(Acwing844.cpp Acwing844.cpp)
add_executable(Acwing845.cpp Acwing845.cpp)
add_executable(Acwing795.cpp Acwing795.cpp)
add_executable(Acwing796.cpp Acwing796.cpp)
add_executable(Acwing797.cpp Acwing797.cpp)
add_executable(Acwing799.cpp Acwing799.cpp)
add_executable(Leetcode982.cpp Leetcode982.cpp)
add_executable(Acwing3305.cpp Acwing3305.cpp)
add_executable(Acwing3777.cpp Acwing3777.cpp)
add_executable(Acwing840.cpp Acwing840.cpp)
add_executable(Acwing841.cpp Acwing841.cpp)
add_executable(Leetcode6309.cpp Leetcode6309.cpp)
add_executable(Acwing837.cpp Acwing837.cpp)
add_executable(Acwing240.cpp Acwing240.cpp)
add_executable(Acwing830.cpp Acwing830.cpp)
add_executable(Acwing154.cpp Acwing154.cpp)
add_executable(Acwing3728.cpp Acwing3728.cpp)
add_executable(Acwing858.cpp Acwing858.cpp)
add_executable(Acwing3555.cpp Acwing3555.cpp)
add_executable(leetcode1590.cpp leetcode1590.cpp)
add_executable(leetcode17.05.cpp leetcode17.05.cpp)
add_executable(2023J.cpp 2023J.cpp)
add_executable(2023E.cpp 2023E.cpp)
add_executable(2023D.cpp 2023D.cpp)
add_executable(leetcode2383.cpp leetcode2383.cpp)
add_executable(Acwing1394.cpp Acwing1394.cpp)
add_executable(Acwing257.cpp Acwing257.cpp)
add_executable(leetcode1605.cpp leetcode1605.cpp)
add_executable(Acwing3792.cpp Acwing3792.cpp)
add_executable(Acwing868.cpp Acwing868.cpp)
add_executable(Acwing4309.cpp Acwing4309.cpp)
add_executable(Acwing872.cpp Acwing872.cpp)
add_executable(leetcode1615.cpp leetcode1615.cpp)
add_executable(Acwing3625.cpp Acwing3625.cpp)
add_executable(Acwing876.cpp Acwing876.cpp)
add_executable(leetcode2488.cpp leetcode2488.cpp)
add_executable(std.cpp std.cpp)
add_executable(test1.cpp test1.cpp)
add_executable(leetcode2389.cpp leetcode2389.cpp)
add_executable(leetcode200.cpp leetcode200.cpp)
add_executable(leetcode1625.cpp leetcode1625.cpp)
add_executable(leetcode1012.cpp leetcode1012.cpp)
add_executable(Acwing3382.cpp Acwing3382.cpp)
add_executable(Acwing2.cpp Acwing2.cpp)
add_executable(leetcode1626.cpp leetcode1626.cpp)
add_executable(leetcode1638.cpp leetcode1638.cpp)
add_executable(Acwing3.cpp Acwing3.cpp)
add_executable(luogu8753.cpp luogu8753.cpp)
add_executable(luogu8755.cpp luogu8755.cpp)
add_executable(luogu8754.cpp luogu8754.cpp)
add_executable(luogu8749.cpp luogu8749.cpp)
add_executable(leetcode1637.cpp leetcode1637.cpp)
add_executable(Acwing9.cpp Acwing9.cpp)
add_executable(Acwing6.cpp Acwing6.cpp)
add_executable(Acwing1051.cpp Acwing1051.cpp)
add_executable(leetcode2367.cpp leetcode2367.cpp)
add_executable(Acwing898.cpp Acwing898.cpp)
add_executable(Acwing895.cpp Acwing895.cpp)
add_executable(Acwing897.cpp Acwing897.cpp)
add_executable(Acwing282.cpp Acwing282.cpp)
add_executable(Acwing3805.cpp Acwing3805.cpp)
add_executable(luogu8743.cpp luogu8743.cpp)
add_executable(luogu8744.cpp luogu8744.cpp)
add_executable(luogu8742.cpp luogu8742.cpp)
add_executable(Acwing1204.cpp Acwing1204.cpp)
add_executable(Acwing1205.cpp Acwing1205.cpp)
add_executable(Acwing1207.cpp Acwing1207.cpp)
add_executable(luogu8597.cpp luogu8597.cpp)
add_executable(luogu8599.cpp luogu8599.cpp)
add_executable(Acwing1210.cpp Acwing1210.cpp)
add_executable(Acwing1212.cpp Acwing1212.cpp)
add_executable(tiankoing.cpp tiankoing.cpp)
add_executable(leetcode1053.cpp leetcode1053.cpp)
add_executable(Acwing4658.cpp Acwing4658.cpp)
add_executable(Acwing4659.cpp Acwing4659.cpp)
add_executable(leetcode1000.cpp leetcode1000.cpp)
add_executable(Acwing4660.cpp Acwing4660.cpp)
add_executable(luogu8785.cpp luogu8785.cpp)
add_executable(luogu8787.cpp luogu8787.cpp)
add_executable(leetcode2427.cpp leetcode2427.cpp)
add_executable(leetcode1017.cpp leetcode1017.cpp)
add_executable(leetcode1040.cpp leetcode1040.cpp)
add_executable(leetcode2399.cpp leetcode2399.cpp)
add_executable(Acwing3384.cpp Acwing3384.cpp)
add_executable(Leetcode2404.cpp Leetcode2404.cpp)
add_executable(Acwing4958.cpp Acwing4958.cpp)
add_executable(leetcode1042.cpp leetcode1042.cpp)
add_executable(leetcode1157.cpp leetcode1157.cpp)
add_executable(leetcode1026.cpp leetcode1026.cpp)
add_executable(Acwing3446.cpp Acwing3446.cpp)
add_executable(leetcode1043.cpp leetcode1043.cpp)
add_executable(Acwing3543.cpp Acwing3543.cpp)
add_executable(Leetcode2413.cpp Leetcode2413.cpp)
add_executable(Acwing3576.cpp Acwing3576.cpp)
add_executable(leetcode1027.cpp leetcode1027.cpp)
add_executable(leetcode1105.cpp leetcode1105.cpp)
add_executable(leetcode2418.cpp leetcode2418.cpp)
add_executable(leetcode1031.cpp leetcode1031.cpp)
add_executable(leetcode1048.cpp leetcode1048.cpp)
add_executable(count.cpp count.cpp)
add_executable(leetcode1172.cpp leetcode1172.cpp)
add_executable(leetcode1376.cpp leetcode1376.cpp)
add_executable(leetcode970.cpp leetcode970.cpp)
add_executable(leetcode1003.cpp leetcode1003.cpp)
add_executable(leetcode2106.cpp leetcode2106.cpp)
add_executable(leetcode2432.cpp leetcode2432.cpp)
add_executable(leetcode1419.cpp leetcode1419.cpp)
add_executable(ccpc.cpp ccpc.cpp)
add_executable(shudu.cpp shudu.cpp)
add_executable(leetcode1015.cpp leetcode1015.cpp)
add_executable(cf872.cpp cf872.cpp)
add_executable(cf872b.cpp cf872b.cpp)
add_executable(leetcode1016.cpp leetcode1016.cpp)
add_executable(leetcode2441.cpp leetcode2441.cpp)
add_executable(leetcode1054.cpp leetcode1054.cpp)
add_executable(leetcode1079.cpp leetcode1079.cpp)
add_executable(leetcodeLCP33.cpp leetcodeLCP33.cpp)
add_executable(leetcode1080.cpp leetcode1080.cpp)
add_executable(leetcode1090.cpp leetcode1090.cpp)
add_executable(leetcode1377.cpp leetcode1377.cpp)
add_executable(leetcode1091.cpp leetcode1091.cpp)
add_executable(leetcode2455.cpp leetcode2455.cpp)
add_executable(leetcode1130.cpp leetcode1130.cpp)
add_executable(leetcode2559.cpp leetcode2559.cpp)
add_executable(leetcode2465.cpp leetcode2465.cpp)
add_executable(leetcode2460.cpp leetcode2460.cpp)
add_executable(leetcode2352.cpp leetcode2352.cpp)
add_executable(leetcode2611.cpp leetcode2611.cpp)
add_executable(luogu8799.cpp luogu8799.cpp)
add_executable(luogu8802.cpp luogu8802.cpp)
add_executable(luogu8800.cpp luogu8800.cpp)
add_executable(luogu8801.cpp luogu8801.cpp)
add_executable(luogu8804.cpp luogu8804.cpp)
add_executable(luogu8803.cpp luogu8803.cpp)
add_executable(luogu8805.cpp luogu8805.cpp)
add_executable(leetcode2699.cpp leetcode2699.cpp)
add_executable(Acwing4908.cpp Acwing4908.cpp)
add_executable(leetcode1483.cpp leetcode1483.cpp)
add_executable(leetcode1177.cpp leetcode1177.cpp)
add_executable(leetcode1494.cpp leetcode1494.cpp)
add_executable(Acwing4440.cpp Acwing4440.cpp)
add_executable(Acwing4382.cpp Acwing4382.cpp)
add_executable(Acwing4742.cpp Acwing4742.cpp)
add_executable(Acwing4741.cpp Acwing4741.cpp)
add_executable(Acwing4738.cpp Acwing4738.cpp)
add_executable(leetcode16.cpp leetcode16.cpp)
add_executable(leetcode1911.cpp leetcode1911.cpp)
add_executable(leetcode931.cpp leetcode931.cpp)
add_executable(leetcode834.cpp leetcode834.cpp)
add_executable(leetcode1851.cpp leetcode1851.cpp)
add_executable(leetcode918.cpp leetcode918.cpp)
add_executable(leetcode2208.cpp leetcode2208.cpp)
add_executable(leetcode2569.cpp leetcode2569.cpp)
add_executable(leetcode2500.cpp leetcode2500.cpp)
add_executable(leetcode2050.cpp leetcode2050.cpp)
add_executable(luoguU324889.cpp luoguU324889.cpp)
add_executable(Acwing1129.cpp Acwing1129.cpp)
add_executable(Acwing1128.cpp Acwing1128.cpp)
add_executable(Acwing1127.cpp Acwing1127.cpp)
add_executable(leetcode1444.cpp leetcode1444.cpp)
add_executable(leetcode2337.cpp leetcode2337.cpp)
add_executable(codeforces1858A.cpp codeforces1858A.cpp)
add_executable(codeforces1858B.cpp codeforces1858B.cpp)
add_executable(codeforces1858C.cpp codeforces1858C.cpp)
add_executable(codeforces1858D.cpp codeforces1858D.cpp)
add_executable(leetcode1782.cpp leetcode1782.cpp)
add_executable(leetcode1267.cpp leetcode1267.cpp)
add_executable(codefun1087.cpp codefun1087.cpp)
add_executable(leetcode1448.cpp leetcode1448.cpp)
add_executable(codefun1088.cpp codefun1088.cpp)
add_executable(leetcode228.cpp leetcode228.cpp)
add_executable(codeforces1862A.cpp codeforces1862A.cpp)
add_executable(codeforces1862B.cpp codeforces1862B.cpp)
add_executable(codeforces1862c.cpp codeforces1862C.cpp)
add_executable(leetcode56.cpp leetcode56.cpp)
add_executable(codeforces1862D.cpp codeforces1862D.cpp)
add_executable(leetcode57.cpp leetcode57.cpp)
add_executable(codeforces1862E.cpp codeforces1862E.cpp)
add_executable(codeforces1862F.cpp codeforces1862F.cpp)
add_executable(codeforces1862G.cpp codeforces1862G.cpp)
add_executable(leetcode823.cpp leetcode823.cpp)
add_executable(Acwing5081.cpp Acwing5081.cpp)
add_executable(leetcode1654.cpp leetcode1654.cpp)
add_executable(leetcode1761.cpp leetcode1761.cpp)
add_executable(leetcode2240.cpp leetcode2240.cpp)
add_executable(leetcode2511.cpp leetcode2511.cpp)
add_executable(leetcode1921.cpp leetcode1921.cpp)
add_executable(leetcode449.cpp leetcode449.cpp)
add_executable(neww.cpp neww.cpp)
add_executable(leetcode2605.cpp leetcode2605.cpp)
add_executable(leetcode1123.cpp leetcode1123.cpp)
add_executable(offer5.cpp offer5.cpp)
add_executable(offer58.cpp offer58.cpp)
add_executable(offer20.cpp offer20.cpp)
add_executable(offer6.cpp offer6.cpp)
add_executable(meituan1.cpp meituan1.cpp)
add_executable(leetcode2594.cpp leetcode2594.cpp)
add_executable(leetcode2651.cpp leetcode2651.cpp)
add_executable(leetcode207.cpp leetcode207.cpp)
add_executable(leetcode210.cpp leetcode210.cpp)
add_executable(leetcode630.cpp leetcode630.cpp)
add_executable(leetcode1462.cpp leetcode1462.cpp)
add_executable(leetcode2596.cpp leetcode2596.cpp)
add_executable(leetcode1222.cpp leetcode1222.cpp)
add_executable(leetcode198.cpp leetcode198.cpp)
add_executable(leetcode337.cpp leetcode337.cpp)
add_executable(leetcode2560.cpp leetcode2560.cpp)
add_executable(leetcode1603.cpp leetcode1603.cpp)
add_executable(leetcode2591.cpp leetcode2591.cpp)
add_executable(leetcode146.cpp leetcode146.cpp)
add_executable(leetcode2582.cpp leetcode2582.cpp)
add_executable(leetcode1333.cpp leetcode1333.cpp)
add_executable(leetcode2251.cpp leetcode2251.cpp)
add_executable(leetcode122.cpp leetcode122.cpp)
add_executable(leetcode309.cpp leetcode309.cpp)
add_executable(leetcode714.cpp leetcode714.cpp)
add_executable(leetcode901.cpp leetcode901.cpp)
add_executable(leetcode2034.cpp leetcode2034.cpp)
add_executable(leetcode2578.cpp leetcode2578.cpp)
add_executable(leetcode2512.cpp leetcode2512.cpp)
add_executable(leetcode2562.cpp leetcode2562.cpp)
add_executable(icpcNanjingI.cpp icpcNanjingI.cpp)
add_executable(leetcode137.cpp leetcode137.cpp)
add_executable(leetcode260.cpp leetcode260.cpp)
add_executable(leetcode2652.cpp leetcode2652.cpp)
add_executable(leetcode2530.cpp leetcode2530.cpp)
add_executable(leetcode1726.cpp leetcode1726.cpp)
add_executable(leetcode2525.cpp leetcode2525.cpp)
add_executable(leetcode2316.cpp leetcode2316.cpp)
add_executable(leetcode1402.cpp leetcode1402.cpp)
add_executable(leetcode2768.cpp leetcode2768.cpp)
add_executable(leetcode1155.cpp leetcode1155.cpp)
add_executable(leetcode2520.cpp leetcode2520.cpp)
add_executable(leetcode1465.cpp leetcode1465.cpp)
add_executable(leetcode2558.cpp leetcode2558.cpp)
add_executable(leetcode274.cpp leetcode274.cpp)
add_executable(leetcode275.cpp leetcode275.cpp)
add_executable(leetcode2003.cpp leetcode2003.cpp)
add_executable(nnajingG.cpp nnajingG.cpp)
add_executable(leetcode2586.cpp leetcode2586.cpp)
add_executable(leetcode2609.cpp leetcode2609.cpp)
add_executable(leetcode2258.cpp leetcode2258.cpp)
add_executable(rjq.cpp rjq.cpp)
add_executable(leetcode1334.cpp leetcode1334.cpp)
add_executable(leetcode2760.cpp leetcode2760.cpp)
add_executable(leetcode2342.cpp leetcode2342.cpp)
add_executable(leetcode2216.cpp leetcode2216.cpp)
add_executable(leetcode2225.cpp leetcode2225.cpp)
add_executable(leetcode2101.cpp leetcode2101.cpp)
add_executable(leetcode3098 leetcode3098.cpp)
add_executable(shopee1 shopee1.cpp)
add_executable(xiaomi xiaomi1.cpp)
add_executable(xiaomi2 xiaomi2.cpp)
add_executable(leetcode322 leetcode322.cpp)
add_executable(leetcode494 leetcode494.cpp)
add_executable(xunlei xunlei1.cpp)
add_executable(dd1 dd1.cpp)
add_executable(dd2 dd2.cpp)
add_executable(b1 b1.cpp)
add_executable(b2 b2.cpp)
add_executable(leetcode406 leetcode406.cpp)
add_executable(leetcode399 leetcode399.cpp)
add_executable(leetcode1845 leetcode1845.cpp)
add_executable(leetcode155 leetcode155.cpp)
add_executable(leetcode300 leetcode300.cpp)
add_executable(leetcode287 leetcode287.cpp)
add_executable(leetcode279 leetcode279.cpp)
add_executable(leetcode240 leetcode240.cpp)
add_executable(leetcode21 leetcode21.cpp)
add_executable(leetcode32 leetcode32.cpp)
add_executable(leetcode46 leetcode46.cpp)
add_executable(leetcode39 leetcode39.cpp)
add_executable(leetcode460 leetcode560.cpp)
add_executable(leetcode72 leetcode72.cpp)
add_executable(leetcode581 leetcode581.cpp)
add_executable(leetcode53 leetcode53.cpp)
